manual cleanup for one case study

--- a/public/stylesheets/sortmenu.css
+++ b/public/stylesheets/sortmenu.css
@@ -1,5 +1,5 @@
-ï»¿/* Sort By Menu
---------------------------------------- */	
+/* Sort By Menu
+--------------------------------------- */
 #menu_container {
 	margin:8px 0 3px 0;
 	width:90px;
