--- a/public/stylesheets/tables.css
+++ b/public/stylesheets/tables.css
@@ -1,4 +1,4 @@
-ï»¿/* Forms */
+/* Forms */
 fieldset { border: 1px solid #ccc; padding: 0 1em 1em 1em; margin: 1.6em 0; } /* padding-top is margin-top for fieldsets in Opera */
 legend { background:none; padding-left: .8em; padding-right: .8em; font-family: Arial, Helvetica, sans-serif; color:#216574; font-weight: normal; font-size: 1.4em; }
 legend+* { margin-top: 1em; } /* compensates for the opera margin bug */
@@ -373,7 +373,7 @@ margin:0 0 20px 0;
 	color: #e5e5d2;
 	padding-bottom: 8px;
 	}
-	
+
 	/* Tables for My Plan
 ------------------------------------------------------------------------------- */
 table.my_plan_styles {
@@ -387,7 +387,7 @@ table.my_plan_styles td.checkmark {
 	text-align: center;
 	width:88px;
 }
-/* 
+/*
 ----Ya I added this //:	 --modified 8-06-2008 Brian Loomis ---------------------------- */
 .left_wrap td, .left_wrap {
 	color: #666666;
