--- a/public/stylesheets/thickbox.css
+++ b/public/stylesheets/thickbox.css
@@ -1,4 +1,4 @@
-ï»¿/* ----------------------------------------------------------------------------------------------------------------*/
+/* ----------------------------------------------------------------------------------------------------------------*/
 /* ---------->>> global settings needed for thickbox <<<-----------------------------------------------------------*/
 /* ----------------------------------------------------------------------------------------------------------------*/
 *{padding: 0; margin: 0;}
