try all links italics

--- a/public/stylesheets/default.css
+++ b/public/stylesheets/default.css
@@ -31,6 +31,10 @@ html { font-size:62.5%; font-family: 'microsoft sans serif', helvetica, arial, s
 
 .indent { margin-left: 20px; padding: 0;}
 
+.left_content a {
+	font-style: italic;
+}
+
 /* Header and Wrapper
 ------------------------------------------------------------------------------- */
 #wrapper {
@@ -49,7 +53,7 @@ html { font-size:62.5%; font-family: 'microsoft sans serif', helvetica, arial, s
 	/* position:absolute; */
 	float: left;
 	/* Removed position:absolute and added float to prevent logo from overlapping and blocking nav links - SN 20120713 */
-	margin:15px 0 0 0; 
+	margin:15px 0 0 0;
 	padding:0;
 	width:576px;
 	height:74px;
@@ -65,7 +69,7 @@ html { font-size:62.5%; font-family: 'microsoft sans serif', helvetica, arial, s
 	background-color: transparent;
 }
 
-/* Quicknav Navigation  
+/* Quicknav Navigation
 ------------------------------------------------------------------------------- */
 #qnav {
 	margin:0;
@@ -75,7 +79,7 @@ html { font-size:62.5%; font-family: 'microsoft sans serif', helvetica, arial, s
 }
 
 #quicknav {
-	margin: 0 7px 0 0; 
+	margin: 0 7px 0 0;
 	padding: 5px 5px 5px 15px;
 	text-align: right;
 	background: transparent url(../../public/images/qnavlt.gif) no-repeat bottom left;
@@ -83,7 +87,7 @@ html { font-size:62.5%; font-family: 'microsoft sans serif', helvetica, arial, s
 
 #quicknav li {
 	display: inline;
-	margin: 0; 
+	margin: 0;
 	padding: 0 5px 0 0;
 	border-right: #e5e5d2 1px solid;
 }
@@ -241,7 +245,7 @@ html { font-size:62.5%; font-family: 'microsoft sans serif', helvetica, arial, s
 .content_wrap_plain p {
 	color:#666;
 	line-height: 1.6em;
-	padding:0; 
+	padding:0;
 	margin:0 0 10px 0;
 }
 
@@ -294,7 +298,7 @@ hr {
 .left_content_my_plan {
 	clear:both;
 	width:660px;
-	margin:0 0 0 12px; 
+	margin:0 0 0 12px;
 	padding:6px 12px 5px 12px;
 	background:none;
 }
@@ -340,7 +344,7 @@ h1, h2, h3, h4, h5, h6 {
 	font-weight: normal;
 }
 
-h1 { 
+h1 {
 	font-size: 1.9em;
 	line-height: 1.2;
 }
@@ -405,7 +409,7 @@ p {
 	padding:0;
 	text-indent: 0;
 	font-size: 10px;
-	
+
 }
 
 .sidebar_body li {
@@ -487,7 +491,7 @@ p {
 .sidebar_body ul li ul li a {
 	font-weight: normal;
 	line-height: 10px;
-	padding: 
+	padding:
 }
 
 
@@ -534,11 +538,11 @@ p {
 
 .tab_left a:link, .tab_left a:hover, .tab_left a:visited {
 	width: 176px;
-	height: 43px;	
+	height: 43px;
 }
 
 .tab_left a:link, .tab_left a:visited { background:transparent url(../../public/images/tab_left.gif) no-repeat 0 0; }
-	
+
 .tab_left a:hover { background:transparent url(../../public/images/tab_left.gif) no-repeat 0 -43px; }
 
 .tab_left a.selected { background:transparent url(../../public/images/tab_left.gif) no-repeat 0 -86px; }
@@ -556,11 +560,11 @@ p {
 
 .tab_middle a:link, .tab_middle a:hover, .tab_middle a:visited {
 	width: 226px;
-	height: 43px;	
+	height: 43px;
 }
 
 .tab_middle a:link, .tab_middle a:visited { background: transparent url(../../public/images/tab_middle.gif) no-repeat 0 0; }
-	
+
 .tab_middle a:hover { background: transparent url(../../public/images/tab_middle.gif) no-repeat 0 -43px; }
 
 .tab_middle a.selected { background: transparent url(../../public/images/tab_middle.gif) no-repeat 0 -86px; }
@@ -578,11 +582,11 @@ p {
 
 .tab_right a:link, .tab_right a:hover, .tab_right a:visited {
 	width: 282px;
-	height: 43px;	
+	height: 43px;
 }
 
 .tab_right a:link, .tab_right a:visited { background: transparent url(../../public/images/tab_right.gif) no-repeat 0 0; }
-	
+
 .tab_right a:hover { background: transparent url(../../public/images/tab_right.gif) no-repeat 0 -43px; }
 
 .tab_right a.selected { background: transparent url(../../public/images/tab_right.gif) no-repeat 0 -86px; }
@@ -603,11 +607,11 @@ p {
 
 .tab_left_fr a:link, .tab_left_fr a:hover, .tab_left_fr a:visited {
 	width: 176px;
-	height: 43px;	
+	height: 43px;
 }
 
 .tab_left_fr a:link, .tab_left_fr a:visited { background:transparent url(../../public/images/tab_left_fr.gif) no-repeat 0 0; }
-	
+
 .tab_left_fr a:hover { background:transparent url(../../public/images/tab_left_fr.gif) no-repeat 0 -43px; }
 
 .tab_left_fr a.selected { background:transparent url(../../public/images/tab_left_fr.gif) no-repeat 0 -86px; }
@@ -625,11 +629,11 @@ p {
 
 .tab_middle_fr a:link, .tab_middle_fr a:hover, .tab_middle_fr a:visited {
 	width: 226px;
-	height: 43px;	
+	height: 43px;
 }
 
 .tab_middle_fr a:link, .tab_middle_fr a:visited { background: transparent url(../../public/images/tab_middle_fr.gif) no-repeat 0 0; }
-	
+
 .tab_middle_fr a:hover { background: transparent url(../../public/images/tab_middle_fr.gif) no-repeat 0 -43px; }
 
 .tab_middle_fr a.selected { background: transparent url(../../public/images/tab_middle_fr.gif) no-repeat 0 -86px; }
@@ -647,11 +651,11 @@ p {
 
 .tab_right_fr a:link, .tab_right_fr a:hover, .tab_right_fr a:visited {
 	width: 282px;
-	height: 43px;	
+	height: 43px;
 }
 
 .tab_right_fr a:link, .tab_right_fr a:visited { background: transparent url(../../public/images/tab_right_fr.gif) no-repeat 0 0; }
-	
+
 .tab_right_fr a:hover { background: transparent url(../../public/images/tab_right_fr.gif) no-repeat 0 -43px; }
 
 .tab_right_fr a.selected { background: transparent url(../../public/images/tab_right_fr.gif) no-repeat 0 -86px; }
@@ -673,7 +677,7 @@ p {
 	width:684px;
 	padding:0;
 	margin:0 0 0 12px;
-	overflow: hidden;	
+	overflow: hidden;
 }
 
 .adv_search_body2 {
@@ -831,7 +835,7 @@ li#my_account_sidebar span.logout_text a {
 	font-weight:bold;
 	line-height:100%;
 	}
-	
+
 /* Introductions
 ------------------------------------------------------------------------------- */
 
@@ -858,7 +862,7 @@ li#my_account_sidebar span.logout_text a {
 	margin: 10px 0;
 	border-bottom:3px solid #9EC2C9;
 	background-color: #e5edee;
-	padding: 0 20px; 
+	padding: 0 20px;
 }
 
 #intro_tac h5 {
@@ -963,8 +967,8 @@ li#my_account_sidebar span.logout_text a {
 	padding: 0 0 0 16px;
 }
 
-.intro_box li a:hover, .intro_box li a.menu_class_current { 
-	background: transparent url(../../public/images/plus_hover.gif) no-repeat 3px 2px; 
+.intro_box li a:hover, .intro_box li a.menu_class_current {
+	background: transparent url(../../public/images/plus_hover.gif) no-repeat 3px 2px;
 	color: #f5d320;
 	}
 
@@ -999,7 +1003,7 @@ ul.tip {
 }
 
 /* Sponsor Area
-------------------------------------------------------------------------------- */	
+------------------------------------------------------------------------------- */
 .sponsor_text {
 	font-size:10px;
 	line-height:12px;
@@ -1119,7 +1123,7 @@ ul.tip {
 	color:#216574;
 	font-size:0.95em;
 	line-height: 1.2em;
-	padding:0; 
+	padding:0;
 	margin: 12px 0 0 0;
 	float: left;
 	width: 120px;
@@ -1143,7 +1147,7 @@ ul.tip {
 
 /* Topic Resources Area
 ------------------------------------------------------------------------------- */
-	
+
 .topic_resources_wrap h3 { text-align: center; }
 
 .topic_resources_detail, .topic_resources_detail_pad {
@@ -1151,7 +1155,7 @@ ul.tip {
 	float:left;
 	width:220px;
 	text-align:left;
-	padding:0; 
+	padding:0;
 	margin:0;
 }
 
@@ -1162,7 +1166,7 @@ ul.tip {
 	color:#216574;
 	font-size:0.95em;
 	line-height: 1.2em;
-	margin: 12px 0 0 0; 
+	margin: 12px 0 0 0;
 	padding:0 0 0 12px;
 	float: left;
 }
@@ -1206,7 +1210,7 @@ ul.tip {
 
 .focus_area {
 	background:#ddddc4 url(../../public/images/focus_box_middle.gif) no-repeat top center;
-	padding:0; 
+	padding:0;
 	overflow: hidden;
 	margin: 0;
 }
@@ -1221,7 +1225,7 @@ ul.tip {
 	color: #216574;
 	line-height: 1.2em;
 	padding-left: 56px;
-	padding-bottom: 10px; 
+	padding-bottom: 10px;
 }
 
 .focus_images {
@@ -1289,7 +1293,7 @@ ul.tip {
 	background:transparent url(../../public/images/index_webinar_area_bottom.gif) no-repeat top center;
 	height:7px;
 	width:452px;
-	padding:0; 
+	padding:0;
 	margin:0;
 	clear:both;
 }
@@ -1317,13 +1321,13 @@ ul.tip {
 }
 
 .plan_col_left ul, .plan_col_right ul, .plan_col_left ol, .plan_col_right ol {
-	padding:0; 
+	padding:0;
 	margin:5px 0 5px 0;
 }
 
 .plan_col_left li, .plan_col_right li{
 	list-style:disc;
-	padding:0 0 5px 0; 
+	padding:0 0 5px 0;
 	margin:0 0 0 14px;
 	color:#434343;
 }
@@ -1333,7 +1337,7 @@ ul.tip {
 .plan_col_right { margin:0; }
 
 /* Case Study Content
-------------------------------------------------------------------------------- */	
+------------------------------------------------------------------------------- */
 .case_studies_content {
 	background: none;
 	float: left;
@@ -1355,13 +1359,13 @@ ul.tip {
 .case_studies_content ul, .case_study_sidebar_body ul {
 	color:#666;
 	line-height:20px;
-	margin: 5px 0 5px 0; 
+	margin: 5px 0 5px 0;
 	padding:0 0 5px 0;
 	text-align:left;
 }
 
 .case_study_sidebar_body li {
-	margin-left: 15px; 
+	margin-left: 15px;
 }
 
 .case_study_sidebar_body h6 {
@@ -1445,7 +1449,7 @@ ul.tip {
 }
 
 /* Two Column Tan
-------------------------------------------------------------------------------- */	
+------------------------------------------------------------------------------- */
 .one_col_tan_cap {
 	background:transparent url(../../public/images/one_col_top_cap.gif) no-repeat top center;
 	padding:0; margin:0;
@@ -1523,7 +1527,7 @@ ul.tip {
 ------------------------------------------------------------------------------- */
 /*
 .bar {
-	padding:0; 
+	padding:0;
 	margin:12px 0 12px 10px;
 	background:transparent url(../../public/images/dark_blue_bar.gif) no-repeat top center;
 	width:683px;
@@ -1534,9 +1538,9 @@ ul.tip {
 
 .bar {
 	background-color: #2b6a72;
-	-moz-border-radius: 5px; 
-	-webkit-border-radius: 5px; 
-	border-radius: 5px; 
+	-moz-border-radius: 5px;
+	-webkit-border-radius: 5px;
+	border-radius: 5px;
 	margin:12px 0 12px 10px;
 	width:683px;
 /* 	height:36px; */
@@ -1547,7 +1551,7 @@ ul.tip {
 
 .bar_tall {
 	line-height: 1.3em;
-	padding:10px 0 0 0; 
+	padding:10px 0 0 0;
 	margin:12px 0 12px 10px;
 	background:transparent url(../../public/images/dark_blue_bar_tall.gif) no-repeat top center;
 	width:683px;
@@ -1597,24 +1601,24 @@ ul.tip {
 	font-size: 1.3em;
 	color:#216574;
 	border-bottom:1px solid #216574;
-	padding: 8px 0 2px 0; 
+	padding: 8px 0 2px 0;
 	margin: 15px 0 0 0;
 	line-height: 30px;
 }
 
 .sub_header_2col img {
-	padding-right:6px; 
+	padding-right:6px;
 }
 
 .sub_header_2col img.landmark_div {
 	padding: 0;
 }
-	
+
 /* NEW ADDITION FROM LUIS
 ------------------------------------------------------------------------------- */
 .yellow_headers {
 	background-color:#ffcc00;
-	padding:12px 12px 9px; 
+	padding:12px 12px 9px;
 	margin:0 0 0 12px;
 	font-weight:bold;
 	font-size:14px;
@@ -1651,7 +1655,7 @@ ul.tip {
 
 .yellow_footer li{
 	list-style:disc;
-	padding:0 0 12px 0; 
+	padding:0 0 12px 0;
 	margin:0 0 0 14px;
 	color:#434343;
 }
@@ -1735,12 +1739,12 @@ div.left_content .yellow_headers a, div.left_content .yellow_headers a:link, div
 }
 
 /* Tips popup box
-------------------------------------------------------------------------------- */	
+------------------------------------------------------------------------------- */
 #hintbox{ /*CSS for pop up hint box */
 	position:absolute;
 	top: 0;
 	background-color: #b5d4d9;
-	width: 150px; /*Default width of hint.*/ 
+	width: 150px; /*Default width of hint.*/
 	padding: 9px;
 	border:1px solid black;
 	font:normal 11px Verdana;
@@ -1758,7 +1762,7 @@ div.left_content .yellow_headers a, div.left_content .yellow_headers a:link, div
 }
 
 /* Footer
-------------------------------------------------------------------------------- */	
+------------------------------------------------------------------------------- */
 #footer {
 	width: 892px;
 	margin:0; padding: 12px 24px;
@@ -1809,10 +1813,10 @@ div.left_content .yellow_headers a, div.left_content .yellow_headers a:link, div
 .hideme { display: none; }
 
 .fck_instance_1 {
-	padding-left: 2px; 
-	padding-bottom: 1px; 
-	padding-right: 2px; 
-	padding-top: 2px; 
+	padding-left: 2px;
+	padding-bottom: 1px;
+	padding-right: 2px;
+	padding-top: 2px;
 	border: 1px solid #216574;
 	margin-top:2px;
 	width:250;
@@ -1830,8 +1834,8 @@ div.left_content .yellow_headers a, div.left_content .yellow_headers a:link, div
 
 /*added 020609*/
 
-.editable_field,  .editable_field2, .editable_field3, .editable_field4, .editable_field5, .editable_field6, .editable_field7, .editable_field8, .editable_field9, .editable_field10, .editable_field11, .editable_field110, .editable_field111, .editable_field112, .editable_field113, .editable_field114, .editable_field115, .editable_field116, .editable_field117, .editable_field118, .editable_field119, .editable_field12, .editable_field120, .editable_field121, .editable_field122, .editable_field123, .editable_field124, .editable_field125, .editable_field126, .editable_field127, .editable_field128, .editable_field129, .editable_field13, .editable_field130, .editable_field131, .editable_field132, .editable_field133, .editable_field134, .editable_field135, .editable_field136, .editable_field137, .editable_field138, .editable_field139, .editable_field14, .editable_field15, .editable_field16, .editable_field17, .editable_field18, .editable_field19, .editable_field20, .editable_field21, .editable_field22, .editable_field23, .editable_field24, .editable_field25, .editable_field26, .editable_field27, .editable_field28, .editable_field29, .editable_field30, .editable_field31, .editable_field32, .editable_field33, .editable_field34, .editable_field35, .editable_field35, .editable_field36, .editable_field37, .editable_field38, .editable_field39, .editable_field40, .editable_field41, .editable_field410, .editable_field411, .editable_field412, .editable_field413, .editable_field414, .editable_field415, .editable_field416, .editable_field417, .editable_field418, .editable_field419, .editable_field42, .editable_field420, .editable_field43, .editable_field44, .editable_field45, .editable_field46, .editable_field47, .editable_field48, .editable_field49, .editable_field50, .editable_field51, .editable_field52, .editable_field53, .editable_field54, .editable_field55, .editable_field56, .editable_field57, .editable_field58, .editable_field59, .editable_field60, .editable_field61, .editable_field62, .editable_field63, .editable_field64, .editable_field65, .editable_field66, .editable_field67, .editable_field68, .editable_field69, .editable_field70, .editable_field71, .editable_field72, .editable_field73, .editable_field74, .editable_field75, .editable_field76, .editable_field77, .editable_field78, .editable_field79, .editable_field80, .editable_field81, .editable_field82, .editable_field83, .editable_field84, .editable_field85, .editable_field86, .editable_field87, .editable_field88, .editable_field89 { 
-	/* 
+.editable_field,  .editable_field2, .editable_field3, .editable_field4, .editable_field5, .editable_field6, .editable_field7, .editable_field8, .editable_field9, .editable_field10, .editable_field11, .editable_field110, .editable_field111, .editable_field112, .editable_field113, .editable_field114, .editable_field115, .editable_field116, .editable_field117, .editable_field118, .editable_field119, .editable_field12, .editable_field120, .editable_field121, .editable_field122, .editable_field123, .editable_field124, .editable_field125, .editable_field126, .editable_field127, .editable_field128, .editable_field129, .editable_field13, .editable_field130, .editable_field131, .editable_field132, .editable_field133, .editable_field134, .editable_field135, .editable_field136, .editable_field137, .editable_field138, .editable_field139, .editable_field14, .editable_field15, .editable_field16, .editable_field17, .editable_field18, .editable_field19, .editable_field20, .editable_field21, .editable_field22, .editable_field23, .editable_field24, .editable_field25, .editable_field26, .editable_field27, .editable_field28, .editable_field29, .editable_field30, .editable_field31, .editable_field32, .editable_field33, .editable_field34, .editable_field35, .editable_field35, .editable_field36, .editable_field37, .editable_field38, .editable_field39, .editable_field40, .editable_field41, .editable_field410, .editable_field411, .editable_field412, .editable_field413, .editable_field414, .editable_field415, .editable_field416, .editable_field417, .editable_field418, .editable_field419, .editable_field42, .editable_field420, .editable_field43, .editable_field44, .editable_field45, .editable_field46, .editable_field47, .editable_field48, .editable_field49, .editable_field50, .editable_field51, .editable_field52, .editable_field53, .editable_field54, .editable_field55, .editable_field56, .editable_field57, .editable_field58, .editable_field59, .editable_field60, .editable_field61, .editable_field62, .editable_field63, .editable_field64, .editable_field65, .editable_field66, .editable_field67, .editable_field68, .editable_field69, .editable_field70, .editable_field71, .editable_field72, .editable_field73, .editable_field74, .editable_field75, .editable_field76, .editable_field77, .editable_field78, .editable_field79, .editable_field80, .editable_field81, .editable_field82, .editable_field83, .editable_field84, .editable_field85, .editable_field86, .editable_field87, .editable_field88, .editable_field89 {
+	/*
 		was the following, changed 02142009
 		background: #fff url(../../public/images/click_edit.gif) no-repeat top right;
 		padding: 15px 5px 5px 5px;
@@ -1842,12 +1846,12 @@ div.left_content .yellow_headers a, div.left_content .yellow_headers a:link, div
 	border: 1px solid #2B6A72;
 	line-height: 1.2em;
 }
-/*end add 020609*/ 
- 
-.alert { 
-	font-size: 1.2em; 
-	font-weight: bold; 
-	color:#CC0000; 
+/*end add 020609*/
+
+.alert {
+	font-size: 1.2em;
+	font-weight: bold;
+	color:#CC0000;
 	padding: 10px 0 10px 20px;
 }
 
